# contra-value

./: .gitignore  README.md  pyproject.toml
chuaque/: __init__.py  d_model.py  entailment.py  formulas.py  reversal.py  truth_values.py
chuaque/tests/: test_chuaque.py
cubun/: af.py  ddg.py  vaf.py
cubun/tests/: test_af.py
iaia/: networks.py
paramo/: knowledge_bases.py  pipeline.py  scenarios.py
paramo/tests/: test_scenarios.py
pquasqua/: transducer.py  weight_extractor.py
pquasqua/tests/: conftest.py  test_beto_perplexity.py  test_corpus_prototypes.py  test_inception_transducer.py  test_initial_weight.py  test_transducer.py  test_weight_extractor.py
pquasqua/tests/contra_value_corpus_ANONYMISED/: exportedproject.json
pquasqua/tests/contra_value_corpus_ANONYMISED/annotation_ser/Juan_Afanador.txt/: INITIAL_CAS.ser
pquasqua/tests/contra_value_corpus_ANONYMISED/annotation_ser/Speaker_AC.txt/: INITIAL_CAS.ser
pquasqua/tests/contra_value_corpus_ANONYMISED/annotation_ser/Speaker_CR.txt/: INITIAL_CAS.ser  admin.ser
pquasqua/tests/contra_value_corpus_ANONYMISED/annotation_ser/Speaker_GR.txt/: INITIAL_CAS.ser  admin.ser
pquasqua/tests/contra_value_corpus_ANONYMISED/annotation_ser/Speaker_JG.txt/: INITIAL_CAS.ser  admin.ser
pquasqua/tests/contra_value_corpus_ANONYMISED/annotation_ser/Speaker_KQ.txt/: INITIAL_CAS.ser  admin.ser
pquasqua/tests/contra_value_corpus_ANONYMISED/annotation_ser/Speaker_LO.txt/: INITIAL_CAS.ser  admin.ser
pquasqua/tests/contra_value_corpus_ANONYMISED/annotation_ser/Speaker_NP.txt/: INITIAL_CAS.ser
pquasqua/tests/contra_value_corpus_ANONYMISED/annotation_ser/Speaker_NR.txt/: INITIAL_CAS.ser
pquasqua/tests/contra_value_corpus_ANONYMISED/annotation_ser/Speaker_SP.txt/: INITIAL_CAS.ser  admin.ser
pquasqua/tests/contra_value_corpus_ANONYMISED/curation_ser/Speaker_GR.txt/: CURATION_USER.ser
pquasqua/tests/contra_value_corpus_ANONYMISED/source/: Juan_Afanador.txt  Speaker_AC.txt  Speaker_CR.txt  Speaker_GR.txt  Speaker_JG.txt  Speaker_KQ.txt  Speaker_LO.txt  Speaker_NP.txt  Speaker_NR.txt  Speaker_SP.txt
sybyn/: categories.py  warg_ffi.py
sybyn/tests/: test_warg_ffi.py
