[project]
name = "contra-value"
version = "0.1.0"
description = "Paraconsistent argumentation for the critique of value"
authors = [{ name = "Juan Afanador", email = "jafanad@gmail.com" }]
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://github.com/jafanad/contra-value"

[project.dependencies]
networkx = ">=3.0"
numpy = ">=1.24"
pandas = ">=2.0"
matplotlib = ">=3.7"
transformers = ">=4.30"
torch = ">=2.0"
scipy = ">=1.10"

[project.optional-dependencies]
notebooks = ["jupyter>=1.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["chuaque/tests", "cubun/tests", "pquasqua/tests", "iaia/tests", "sybyn/tests"]
